overview: Fix shadow placed in the wrong spot.

Bug caused by press while still animation, then shadow gets applied after
animation end. Fix this by canceling animation watching if press event.

Test: manual
Bug: 817436
Change-Id: Icd1677d4854db8fc6b5ec12c7c71d1a76e955ea6
Reviewed-on: https://chromium-review.googlesource.com/941721
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540374}
Former-commit-id: 02c8b958d3d10b4d442d589c409809b2c2e9b642